--- a/vite-frontend/src/App.css
+++ b/vite-frontend/src/App.css
@@ -40,3 +40,26 @@
 .read-the-docs {
   color: #888;
 }
+input,
+textarea,
+select {
+  font-size: 20px;
+}
+
+@media (max-width: 1280px) {
+  #root {
+    padding: 1rem;
+  }
+  .card {
+    padding: 1em;
+  }
+}
+
+@media (max-width: 768px) {
+  #root {
+    padding: 0.5rem;
+  }
+  .card {
+    padding: 0.5em;
+  }
+}
