--- a/vite-frontend/src/components/UserFood.css
+++ b/vite-frontend/src/components/UserFood.css
@@ -27,7 +27,11 @@
     box-sizing: border-box;
     padding: 5px;
   }
-  
+  input[type="number"] {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 5px;
+  }
   button {
     padding: 10px 20px;
     margin-top: 10px;
